import React from 'react';
import renderer from 'react-test-renderer';
import App from '../App';


describe('SnapShot testing', () => {
   
    it('<App />', () => {
        
        const tree = renderer.create(<App />).toJSON();
        expect(tree).toMatchSnapshot();
      });
  
})
