// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snap Shot testing <App /> 1`] = `
<div
  className="App"
>
  <link
    crossOrigin="anonymous"
    href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
    integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
    rel="stylesheet"
  />
  <div
    className="container"
    style={
      Object {
        "paddingTop": "30px",
        "width": "1200px",
      }
    }
  >
    <nav
      className="navbar navbar-expand-lg navbar-light bg-dark"
    >
      <span
        className="navbar-brand"
        style={
          Object {
            "color": "white",
          }
        }
      >
        Your Content Libary
      </span>
      <button
        aria-controls="basic-navbar-nav"
        aria-label="Toggle navigation"
        className="navbar-toggler collapsed"
        onClick={[Function]}
        type="button"
      >
        <span
          className="navbar-toggler-icon"
        />
      </button>
      <a
        href="/favourite"
        onClick={[Function]}
      >
        <svg
          fill="currentColor"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z"
            fillRule="evenodd"
          />
        </svg>
         Favourites
      </a>
      <div
        aria-expanded={null}
        className="navbar-collapse collapse"
        id="basic-navbar-nav"
      >
        <div
          className="ml-auto navbar-nav"
          onKeyDown={[Function]}
        >
          <div
            className="dropdown nav-item"
            onKeyDown={[Function]}
            style={
              Object {
                "color": "white",
                "float": "right",
              }
            }
            text="light"
          >
            <a
              aria-expanded={false}
              aria-haspopup={true}
              className="dropdown-toggle nav-link"
              data-rb-event-key={null}
              href="#"
              id="basic-nav-dropdown"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
            >
              Music
            </a>
          </div>
        </div>
        <form
          className="form-inline"
        >
          <a
            href="/"
            onClick={[Function]}
          >
             
            <input
              className="mr-sm-2 form-control"
              onChange={[Function]}
              placeholder="Search..."
              type="text"
            />
          </a>
          <button
            className="btn btn-light"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <svg
              fill="currentColor"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10.442 10.442a1 1 0 0 1 1.415 0l3.85 3.85a1 1 0 0 1-1.414 1.415l-3.85-3.85a1 1 0 0 1 0-1.415z"
                fillRule="evenodd"
              />
              <path
                d="M6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11zM13 6.5a6.5 6.5 0 1 1-13 0 6.5 6.5 0 0 1 13 0z"
                fillRule="evenodd"
              />
            </svg>
            Search
          </button>
        </form>
      </div>
    </nav>
    <div>
      <h2
        style={
          Object {
            "color": "lightgray",
          }
        }
      >
        Search for Media
      </h2>
    </div>
  </div>
</div>
`;

exports[`Snap Shot testing <NavBar /> 1`] = `
<nav
  className="navbar navbar-expand-lg navbar-light bg-dark"
>
  <span
    className="navbar-brand"
    style={
      Object {
        "color": "white",
      }
    }
  >
    Your Content Libary
  </span>
  <button
    aria-controls="basic-navbar-nav"
    aria-label="Toggle navigation"
    className="navbar-toggler collapsed"
    onClick={[Function]}
    type="button"
  >
    <span
      className="navbar-toggler-icon"
    />
  </button>
  <a
    href="/favourite"
    onClick={[Function]}
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z"
        fillRule="evenodd"
      />
    </svg>
     Favourites
  </a>
  <div
    aria-expanded={null}
    className="navbar-collapse collapse"
    id="basic-navbar-nav"
  >
    <div
      className="ml-auto navbar-nav"
      onKeyDown={[Function]}
    >
      <div
        className="dropdown nav-item"
        onKeyDown={[Function]}
        style={
          Object {
            "color": "white",
            "float": "right",
          }
        }
        text="light"
      >
        <a
          aria-expanded={false}
          aria-haspopup={true}
          className="dropdown-toggle nav-link"
          data-rb-event-key={null}
          href="#"
          id="basic-nav-dropdown"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button"
        />
      </div>
    </div>
    <form
      className="form-inline"
    >
      <a
        href="/"
        onClick={[Function]}
      >
         
        <input
          className="mr-sm-2 form-control"
          onChange={[Function]}
          placeholder="Search..."
          type="text"
        />
      </a>
      <button
        className="btn btn-light"
        disabled={false}
        type="button"
      >
        <svg
          fill="currentColor"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10.442 10.442a1 1 0 0 1 1.415 0l3.85 3.85a1 1 0 0 1-1.414 1.415l-3.85-3.85a1 1 0 0 1 0-1.415z"
            fillRule="evenodd"
          />
          <path
            d="M6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11zM13 6.5a6.5 6.5 0 1 1-13 0 6.5 6.5 0 0 1 13 0z"
            fillRule="evenodd"
          />
        </svg>
        Search
      </button>
    </form>
  </div>
</nav>
`;

exports[`SnapShot testing <App /> 1`] = `
<div
  className="App"
>
  <link
    crossOrigin="anonymous"
    href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
    integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
    rel="stylesheet"
  />
  <div
    className="container"
    style={
      Object {
        "paddingTop": "30px",
        "width": "1200px",
      }
    }
  >
    <nav
      className="navbar navbar-expand-lg navbar-light bg-dark"
    >
      <span
        className="navbar-brand"
        style={
          Object {
            "color": "white",
          }
        }
      >
        Your Content Libary
      </span>
      <button
        aria-controls="basic-navbar-nav"
        aria-label="Toggle navigation"
        className="navbar-toggler collapsed"
        onClick={[Function]}
        type="button"
      >
        <span
          className="navbar-toggler-icon"
        />
      </button>
      <a
        href="/favourite"
        onClick={[Function]}
      >
        <svg
          fill="currentColor"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z"
            fillRule="evenodd"
          />
        </svg>
         Favourites
      </a>
      <div
        aria-expanded={null}
        className="navbar-collapse collapse"
        id="basic-navbar-nav"
      >
        <div
          className="ml-auto navbar-nav"
          onKeyDown={[Function]}
        >
          <div
            className="dropdown nav-item"
            onKeyDown={[Function]}
            style={
              Object {
                "color": "white",
                "float": "right",
              }
            }
            text="light"
          >
            <a
              aria-expanded={false}
              aria-haspopup={true}
              className="dropdown-toggle nav-link"
              data-rb-event-key={null}
              href="#"
              id="basic-nav-dropdown"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
            >
              Music
            </a>
          </div>
        </div>
        <form
          className="form-inline"
        >
          <a
            href="/"
            onClick={[Function]}
          >
             
            <input
              className="mr-sm-2 form-control"
              onChange={[Function]}
              placeholder="Search..."
              type="text"
            />
          </a>
          <button
            className="btn btn-light"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <svg
              fill="currentColor"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10.442 10.442a1 1 0 0 1 1.415 0l3.85 3.85a1 1 0 0 1-1.414 1.415l-3.85-3.85a1 1 0 0 1 0-1.415z"
                fillRule="evenodd"
              />
              <path
                d="M6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11zM13 6.5a6.5 6.5 0 1 1-13 0 6.5 6.5 0 0 1 13 0z"
                fillRule="evenodd"
              />
            </svg>
            Search
          </button>
        </form>
      </div>
    </nav>
    <div>
      <h2
        style={
          Object {
            "color": "lightgray",
          }
        }
      >
        Search for Media
      </h2>
    </div>
  </div>
</div>
`;
